--- a/labs/lab_6.adoc
+++ b/labs/lab_6.adoc
@@ -10,62 +10,91 @@ So far, our primary entrypoint for firing actions has been through a Trigger. Ho
 
 == Feeds
 
-Feeds are an advanced concept in OpenWhisk where users can expose an event producer service within a package. A feed is controlled by a Feed Action which handles deleting, pausing and resuming the streaming of events. Feeds can be implemented in one of three architectural patterns:
+**link:https://github.com/apache/incubator-openwhisk/blob/master/docs/feeds.md[Feeds]** are an advanced concept in OpenWhisk where users can expose an event producer service within a package. A feed is controlled by a **Feed Action** which handles deleting, pausing and resuming the streaming of events. Feeds can be implemented in one of three architectural patterns:
 
-** Hooks
-** Polling
-** Persistent Connections
+* Hooks
+* Polling
+* Persistent Connections
 
 In our use case for accepting messages from the AMQ broker, the Persistent Connection feed option is the most applicable.
 
-A full overview of feeds and the architecture can be found in the OpenWhisk project documentation.
+A full overview of feeds and the architecture can be found in the link:https://github.com/apache/incubator-openwhisk/blob/master/docs/feeds.md[OpenWhisk project documentation].
+
 === Feed Action
 
-To manage the registration of MQTT topics for which messages should be sent into the OpenWhisk platform, a feed action has been provided at in the repository at iot-serverless-mqtt-feed/action/feedAction.js
+To manage the registration of MQTT topics for which messages should be sent into the OpenWhisk platform, a feed action has been provided at in the repository at `iot-serverless-mqtt-feed/action/feedAction.js`
 
 Feel free to browse the content of the action.
 
- * Add the feed action to the iot-serverless package using the following command executed from the root of the repository:
+Add the feed action to the _iot-serverless_ package called _mqttFeed_ using the following command executed from the root of the repository:
 
 [source,bash]
 ----
+ $ cd /home/lab-user/iot-serverless/
  $ wsk -i action update -a feed true iot-serverless/mqttFeed iot-serverless-mqtt-feed/action/feedAction.js
+
+ ok: updated action iot-serverless/mqttFeed
 ----
-TIP: The -a flag is designates that an annotation should be placed on the associated action.
 
-An annotation is a piece of metadata that can be applied to an action to provide additional information without disrupting the underlying schema. When creating a feed action, an annotation called feed with a value of true is specified so that the platform will recognize and manage the asset appropriately.
+TIP: The `-a` flag is designates that an annotation should be placed on the associated action. An annotation is a piece of metadata that can be applied to an action to provide additional information without disrupting the underlying schema. When creating a feed action, an annotation called feed with a value of true is specified so that the platform will recognize and manage the asset appropriately.
 
-* Display the contents of the iot-serverless package to confirm the feed has been registered
+Display the contents of the iot-serverless package to confirm the feed has been registered
 
 [source,bash]
 ----
  $ wsk -i package get iot-serverless --summary
+
+ package /whisk.system/iot-serverless
+   (parameters: none defined)
+ action /whisk.system/iot-serverless/iotServerlessSequence
+   (parameters: none defined)
+ action /whisk.system/iot-serverless/dbInsert
+   (parameters: none defined)
+ action /whisk.system/iot-serverless/geofence
+   (parameters: none defined)
+ action /whisk.system/iot-serverless/enricher
+   (parameters: none defined)
+ action /whisk.system/iot-serverless/formatInput
+   (parameters: none defined)
+ feed   /whisk.system/iot-serverless/mqttFeed
+   (parameters: none defined)
 ----
+
 === Feed Provider
 
 Recall the three types of feeds that can be implemented: hooks, polling and connections. We stated that we would be utilizing the connection type of feed as it will provide a persistent connection to the AMQ broker. Since actions are short lived, another component must be added to the environment to maintain the long lived connection to AMQ. This service is known as a Feed Provider.
 
-To conform with the feed architecture within OpenWhisk, the provider will need to expose a REST API that manages the control of the feed as well  as act as a proxy between AMQ and OpenWhisk.
+To conform with the feed architecture within OpenWhisk, the provider will need to expose a REST API that manages the control of the feed as well as act as a proxy between AMQ and OpenWhisk.
 
-A Feed Provider implementation has been provided in the iot-serverless-mqtt-feed/provider/ folder and is a Spring Boot based application.
+A Feed Provider implementation has been provided in the `iot-serverless-mqtt-feed/provider/` folder and is a Spring Boot based application.
 
 Templates have been created to support the building of a custom image containing the application along with the deployment to OpenShift.
 
-* First, instantiate the template to build the image:
+First, instantiate the template from the root of the project to build the image:
 
 [source,bash]
 ----
+ $ cd /home/lab-user/iot-serverless/
  $ oc process -f applier/templates/mqtt-provider-build.yml | oc apply -f-
-----
-A new BuildConfig and ImageStream will be created along with the triggering of the Source-to-Image based build in OpenShift.
 
-* A new build should be automatically triggered. Verify the build has started by running the following command:
+ imagestream "mqtt-provider" created
+ buildconfig "mqtt-provider" created
+----
+
+A new BuildConfig and ImageStream will be created along with the triggering of the link:https://docs.openshift.com/container-platform/latest/using_images/s2i_images/index.html[Source-to-Image] based build in OpenShift.
+
+A new build should be automatically triggered. Verify the build has started by running the following command:
 
 [source,bash]
 ----
  $  oc get builds -l application=mqtt-provider
+
+ NAME              TYPE      FROM          STATUS    STARTED          DURATION
+mqtt-provider-1   Source    Git@fa9f79c   Running   26 seconds ago   
+
 ----
-* When a build is present and running, the logs from the build execution can be seen using the following command:
+
+When a build is present and running, the logs from the build execution can be seen using the following command:
 
 [source,bash]
 ----
@@ -74,35 +103,55 @@ A new BuildConfig and ImageStream will be created along with the triggering of t
 
 When the image has been built successfully, another template can be instantiated to create the associated DeploymentConfig and Service. A set of parameters must be provided when processing the template including the credentials for access the MQTT broker and the location of the broker within the iot-serverless project.
 
-* Execute the following command to instantiate the software sensor deployment template.
+Execute the following command to instantiate the mqtt provider deployment template.
 
 [source,bash]
 ----
  $ oc -p MQ_USERNAME=iot-serverless -p MQ_PASSWORD=iot-serverless -p MQ_APPLICATION_SERVICE=broker-amq-tcp process -p MONGODB_SERVICE=mongodb -f applier/templates/mqtt-provider-deployment.yml | oc apply -f-
+
+ service "mqtt-provider" created
+ deploymentconfig "mqtt-provider" created
 ----
-Verify the mqtt-provider is active by executing the command oc get pods. If the pod with the prefix mqtt-provider displays 1/1 in the READY column, the pod is successfully running.
 
-Finally, with the Feed action and provider deployed, the final step is to update the existing iotServerlessTrigger to make use of the feed action. The feed action takes in one parameter called “topic” which is the selector pattern that the provider should consider when registering itself with the broker. Triggers utilizing feeds also need to have the --feed flag also specified. Unfortunately, this flag is only available when creating new triggers:
+Verify the mqtt-provider is active by verifying the status using the following command:
 
- * Delete the existing iotServerlessTrigger trigger:
+[source,bash]
+----
+$ oc get pods -l application=mqtt-provider
+
+NAME                    READY     STATUS    RESTARTS   AGE
+mqtt-provider-1-nh5sl   1/1       Running   0          1m
+----
+
+A READY column indicating 1/1 denotes the service is ready and available
+
+Finally, with the Feed action and provider deployed, the final step is to update the existing _iotServerlessTrigger_ to make use of the feed action. The feed action takes in one parameter called “topic” which is the link:http://activemq.apache.org/selectors.html[selector pattern] that the provider should consider when registering itself with the broker. Triggers utilizing feeds also need to have the `--feed` flag specified. Unfortunately, this flag is only available when creating new triggers:
+
+ Delete the existing iotServerlessTrigger trigger:
 
 [source,bash]
 ----
  $ wsk -i trigger delete iotServerlessTrigger
+
+ ok: deleted trigger iotServerlessTrigger
 ----
 
-* Now recreate the trigger to also denote the feed that should be used as the event source and the parameter with the topic pattern:
+Now recreate the trigger to also denote the feed that should be used as the event source and the parameter with the topic pattern:
 
 [source,bash]
 ----
  $ wsk -i trigger create iotServerlessTrigger --feed iot-serverless/mqttFeed -p topic “.sf.>”
 ----
-If no error was returned, the trigger was successfully registered with the provider. This can be confirmed by viewing the logs for the mqtt-trigger which will display the following:
 
-source,bash]
+If no error was returned, the trigger was successfully registered with the provider. This can be confirmed by viewing the logs for the _mqtt-provider_ pod by executing the following command:
+
+[source,bash]
 ----
+ $ oc logs $(oc get pods -l=application=mqtt-provider -o 'jsonpath={.items[0].metadata.name}')
+
  2018-05-05 18:22:29.057  INFO 1 --- [nio-8080-exec-7] c.r.i.controller.FeedProviderController  : Trigger Name: /_/iotServerlessTrigger
  2018-05-05 18:22:29.242  INFO 1 --- [nio-8080-exec-7] c.redhat.iot.service.TriggerDataService  : Saving Trigger
 ----
+
 [.text-center]
 image:icons/icon-previous.png[align=left, width=128, link=lab_5.html] image:icons/icon-home.png[align="center",width=128, link=lab_content.html] image:icons/icon-next.png[align="right"width=128, link=lab_7.html]
